<resources>
    <string name="app_name">MealPlanner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_meal">AddMealActivity</string>
    <string name="one_star_rating">Not really a fan</string>
    <string name="two_star_rating">Just OK</string>
    <string name="three_star_rating">Good Stuff</string>
    <string name="four_star_rating">Love It!</string>
    <string name="five_star_rating">Favorite Meal</string>
    <string name="send_label">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_the_name_of_the_meal">Enter the name of the meal</string>
    <string name="add_ingredients">Add ingredients</string>
    <string name="ingredient">Ingredient</string>
    <string name="next">Next</string>
    <string name="select_the_health_value_of_the_meal">Select the Health value of the Meal</string>
    <string name="healthy">Healthy</string>
    <string name="normal">Normal</string>
    <string name="unhealthy">Unhealthy</string>
    <string name="rate_this_meal">Rate this meal</string>
    <string name="finish">Finish</string>
</resources>
