<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HealthRatingFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="81dp"
        android:text="@string/select_the_health_value_of_the_meal"
        android:textAlignment="center"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/healthRatingGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="143dp">

        <RadioButton
            android:id="@+id/healthyRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/healthy"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/normalRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/normal"
            android:textColor="#f4e242"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/unhealthyRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/unhealthy"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp" />

    </RadioGroup>

    <Button
        android:id="@+id/healthRatingNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="47dp"
        android:text="@string/next" />
</RelativeLayout>